<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:id="@+id/cartIconContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:padding="@dimen/spacing_small">

            <ImageView
                android:id="@+id/cartIcon"
                android:layout_width="@dimen/icon_size_medium"
                android:layout_height="@dimen/icon_size_medium"
                android:src="@drawable/ic_cart"
                android:contentDescription="@string/cart"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/cartBadge"
                android:layout_width="@dimen/badge_size"
                android:layout_height="@dimen/badge_size"
                android:layout_gravity="end|top"
                android:background="@drawable/badge_background"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/badge_text_size"
                android:visibility="gone"
                tools:text="3"
                tools:visibility="visible" />
        </FrameLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchCard"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_height"
        android:layout_margin="@dimen/margin_medium"
        app:cardCornerRadius="24dp"
        app:cardElevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium">

            <ImageView
                android:layout_width="@dimen/icon_size_medium"
                android:layout_height="@dimen/icon_size_medium"
                android:src="@drawable/ic_search"
                app:tint="@color/text_hint" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/search_hint"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_size_body" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <HorizontalScrollView
        android:id="@+id/categoriesScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/searchCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/categoryChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_all"
                android:checked="true"
                style="@style/Widget.Yanthraa.Chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipElectronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_electronics"
                style="@style/Widget.Yanthraa.Chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_fashion"
                style="@style/Widget.Yanthraa.Chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_home"
                style="@style/Widget.Yanthraa.Chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBeauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_beauty"
                style="@style/Widget.Yanthraa.Chip" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_medium"
        android:nestedScrollingEnabled="true"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/categoriesScrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_product_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
